# ProtoChat

./: LICENSE  README.md  REQUIREMENTS.md
client/: CMakeLists.txt
client/include/: common.h  input_output.h  networking.h  protochat.h  protoclient.h  setup.h
client/src/: input_output.c  main.c  networking.c  protochat.c  protoclient.c  setup.c
server/: networking.py  protoserver.py
